--- a/app/views/home/evalpage_.erb
+++ b/app/views/home/evalpage_.erb
@@ -112,6 +112,19 @@
   <div role="tabpanel" class="tab-pane fade" id="settings">...</div>
 </div>
 
+
+
+
+<div class="row">
+  <div class="col-md-12" style="background-color:rgb(80,80,80); height: 120px; padding:15px; color: rgb(200,200,200)">
+  <div class="col-md-4"></div>
+    <div class="col-md-4 foot_t">
+    <a href="#" class="top"><div class="col-md-4"><span class="glyphicon glyphicon-chevron-up" aria-hidden="true">&nbsp;top</span></div></a>
+    </div>
+  <div class="col-md-4"> created by<br>Garam An &nbsp Jina Lee &nbsp Younseok Lee &nbsp Byungmook Kim</div>
+  
+  </div>
+</div>
   
   
 	
@@ -183,6 +196,8 @@
     	});
 
 	}
+
+
 
 
 	
