--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,17 +6,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import url(https://fonts.googleapis.com/css?family=Asap:400,400italic,700,700italic);
+@import url();
 //@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 * {
 	font-family: 'Asap', sans-serif;
+	padding:0px;
+	margin:0px;
 	}
 
 body {
 	font-family: 'Asap', sans-serif;
     margin: 0px;
     color: white;
-    background-color: gray;
+    background: black;
 }
 
 a { 
@@ -32,6 +35,13 @@ a {
 	color: white;
 	height:100%;
 	}
+	
+.container-fluid-gray {
+	background-color: gray;
+	color: white;
+	height:100%;
+	}	
+	
 	
 
 .main_logo {
@@ -58,18 +68,54 @@ a {
     }
 
 .img_bg{
-  background-image: url(asset-path('bg.png'));
-  background-repeat: no-repeat;
-  background-size: 100% auto;
+  background: url(asset-path('bg.png')) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   position: relative;
-  top: -100px ;
-  margin: auto;
-  z-index: 1;
+  z-index: 999999;
   width: 1680px;
   height: 1200px;
-  display: block;
   }
   
+.row .img1 {
+  z-index: 1;
+  width: 100%;
+  top: 0;
+}  
+
+.row .img_text {
+  font-size: 20px;
+  line-height: 30px;
+  z-index: 9;
+  padding: 30px;
+  position: relative;
+}
+  
+.container-fluid .img_div {
+  z-index: 1;
+  padding: 0px;
+  position: relative;
+  .img_over {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: auto;
+  }
+  .img_text {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: auto;
+    padding: 100px 0 0 30px;
+    &.is-lefted {
+      left: 0;
+      right: auto;
+      margin-left: 15%;
+    }
+  }
+}
 
 #wrapper{
   position: relative;
@@ -100,37 +146,76 @@ a {
     width: 100%;
     font-family: 'Asap', sans-serif;
     display: inline;
-    position: absolute;
-    z-index:9999;
     color:white;
     font-size:20px;
+    
+}
+
+.absolute{
     text-align: center;
-    top: 77%;
+    position: absolute;
+    bottom: -8%;
+    -moz-animation: bounceIn 0.5s;
+	-webkit-animation: bounceIn 0.5s;
+	animation: bounceIn 0.5s;
+	border:0px;
+    border-radius: 0;
+    opacity:0;
+}
+
+.sticky{
+    text-align : right;
+    padding: 0 20px 0 0;
+    position: fixed;
+    z-index: 99999;
+    height: 50px;
+	margin: 0;
+	background: rgb(80,80,80);
+	border-radius: 0px;
+	-moz-animation: bounceInDown 0.1s;
+	-webkit-animation: bounceInDown 0.1s;
+	animation: bounceInDown 0.1s;
+}
+
+
+.sticky a{
+    height:100%;
+    font-size:14px;
+    display: inline-block;
+    padding: 13px;
+}
+
+.main_p a:hover{
+    cursor: pointer;
+    text-decoration: none;
+    color: rgb(255,183,172);
 }
 
 .main_p a{
     color:white;
 }
-.foot_p{
-    font-family: 'Asap', sans-serif;
-    z-index:9999;
-    position:relative;
-    color:white;
-    font-size:20px;
-    display:inline;
-    margin-top:8%;
+
+.main_arrow{
+  position:absolute;
+  margin-top:128%;
+  color:white;
+  font-size:40pt;
+  padding: 20px;
+  text-align: center;
 }
+.col-md-12 .foot_t a {
+    color: black;
+    text-align: center;
+    }
 
 .foot_t{
     font-family: 'Asap', sans-serif;
     z-index:9999;
     position:relative;
-    color:white;
     font-size:14px;
     display:inline;
-    margin-top:8%;
+    padding:0px;
 }
-
 
 div.a {
         margin: auto;
@@ -143,28 +228,36 @@ div.a {
 a.top {
         position: fixed;
         left: 50%;
-        bottom: 50px;
+        bottom: 30px;
         display: none;
         z-index:9999;
       }
       
       
 .main_img_1{
-    width:110%;
+    width:100%;
+    margin-top:-10%;
     position: relative;
     margin-left:-5%;
-    margin-top:5%;
+}
+
+.main_img_2{
+    width:100%;
+    position: relative;
+    margin-left:-5%;
+    margin-bottom:15%;
 }
 
 
 .about_text_2{
     position:absolute;
-    margin-top:15%;
-    margin-left:70%;
-    color: white;
-    font-size:16px;
-    z-index:9999;
+    margin-left:71%;
+    color: gray;
+    font-size:14px;
+    z-index:9990;
+    margin-top:30px;
     }
+    
 
 
 
@@ -318,7 +411,7 @@ a.top {
 }
 
 .profile_bg {
-    height: 200px;
+    height: 215px;
     margin-top:50px;
     z-index:1;
     background-color: rgb(100,100,100);
@@ -333,12 +426,14 @@ a.top {
 }*/
 
 .profile_l {
+    line-height: 15px;
+    text-align: center;
     margin: 0px;
     height: 50px;
     border-radius:  25px 0 0 25px ;
     background: rgb(255,183,172);
     padding: 12px 0px 5px 10px;
-    font-size: 22px;
+    font-size: 14px;
     }
     
 .profile_c {
@@ -356,12 +451,15 @@ a.top {
     }
     
 .profile_r {
+    line-height: 16px;
+    text-align: center;
+    float: center;
     margin: 0px;
     height: 50px;
     border-radius:  0 25px 25px 0 ;
     background: rgb(0,189,212);
     padding: 12px 15px 5px 0px;
-    font-size: 20px;
+    font-size: 15px;
     }
     
 .profile_lcr {
@@ -377,6 +475,10 @@ a.top {
     padding: 0 38% 0 38%;
     }
 
+.profile_span { 
+    text-align:center;
+    font-size: 12px;
+    }
 
 #navbar {
     margin:0px;
@@ -437,6 +539,7 @@ a.top {
 
 .product_div {
     padding: 30px;
+     overflow : hidden;
 }
 
 .col-md-12 .product_box{
@@ -457,6 +560,7 @@ a.top {
     
 .product_img{
     position: relative;
+    width: 70%;
 }
 
 .product_name{
@@ -487,8 +591,15 @@ a.top {
 
 
 .product_span {
-    padding: 12px 2px 0px 2px;
-    font-size: 12px;
+    padding: 0px 2px 0px 2px;
+    font-size: 14px;
+    text-align:center;
+    color:rgb(100,100,100) ;
+}
+
+.product_span_two {
+    padding: 15px 2px 0px 2px;
+    font-size: 14px;
     text-align:center;
     color:rgb(100,100,100) ;
 }
@@ -503,7 +614,7 @@ a.top {
 .already{
     height: 100%;
     background-color: rgb(220,220,220);
-    padding: 10px 50px 100px 50px;
+    padding: 10px 50px 15px 50px;
     }
 
 .ellip {
@@ -514,43 +625,67 @@ a.top {
 
 .dropdown{
      margin-top: 20%;
-     margin-bottom: -13%;
+     margin-bottom: 5%;
      margin-left: 21%;
      border-radius: 2px;
      color:white;
-     background-color:#c0c0c0;
      width:150px;
+     background-color:gray;
+}
+
+.next_page{
+  margin-top : 5%;
 }
 
 .drop{
+    margin-top:-2%;
+    margin-bottom:-15%;
     text-align:center;
+    padding:5%;
 }
 
 .dropdown-menu{
     width:150px;
+
 }
 
 .e_first_div{
     margin-top: 10%;
     } 
     
-.s_crop {
-  text-align: center;
-  height: 400px;
-  padding: 0px;
-  overflow : hidden;
-  position: absolute;
-  }    
-    
-.season {
-  width:100%;
-  z-index: 1;
-  overflow: hidden;
+.col-md-12 .season_div {
+    height:100%;
+    padding: 15px;
+    background-color: white;
+    /*background: rgb(255,183,172); /* Old browsers */
+    /*background: -moz-linear-gradient(left,  rgb(255,183,172) 21%, rgb(0,189,212) 100%); /* FF3.6+ */
+    /*background: -webkit-gradient(linear, left top, right top, color-stop(21%,rgb(255,183,172)), color-stop(100%,rgb(0,189,212))); /* Chrome,Safari4+ */
+    /*background: -webkit-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Chrome10+,Safari5.1+ */
+    /*background: -o-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* Opera 11.10+ */
+    /*background: -ms-linear-gradient(left,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* IE10+ */
+    /*background: linear-gradient(to right,  rgb(255,183,172) 21%,rgb(0,189,212) 100%); /* W3C */
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb7ac', endColorstr='#00bdd4',GradientType=1 ); /* IE6-9 */
   }
+
+.col-md-12 .season {
+    text-align:center;
+    opacity: 0.3;
+  }
+
+.col-md-12 .season .season_img {
+    width: 50px ;
+    padding-top: 2%;
+    }
+
+.button_right{
+  position:absolute;
+  left:100%;
+  top:45%;
+}
 
 /************************* about ************************/
 .about_div{
-    height: 400px;
+    height: 300px;
     background: rgb(255,183,172); /* Old browsers */
     background: -moz-linear-gradient(left,  rgb(255,183,172) 21%, rgb(0,189,212) 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right top, color-stop(21%,rgb(255,183,172)), color-stop(100%,rgb(0,189,212))); /* Chrome,Safari4+ */
@@ -565,6 +700,12 @@ a.top {
     color: rgb(100,100,100);
     padding: 10 30px 0 30px;
     }
+  
+#about_text {
+  padding-top: 50px;
+  z-index:99px;
+  
+  }
 
 .logo_2 {
     width: 230px;
@@ -701,3 +842,26 @@ a.top {
 .smellow-rate-hover{
     background-image: url(asset-path('heart_fill.png'));
 }
+
+.smellow-rate-clicked{
+    background-image: url(asset-path('heart_fill.png'));
+}
+
+
+.btn {
+  font-size:10px;
+}
+
+/* ------ footer ----- */
+
+.row .foot_1 {
+    text-align:right;
+    height:80px;
+     background-color:rgb(80,80,80); 
+     padding: 15px 30px 15px 15px; 
+     margin:0px;
+    }
+    
+.row .foot_1 .foot_2 {
+    color: rgb(150,150,150);
+    }
